[gd_scene load_steps=11 format=2]

[ext_resource path="res://tscndosyalari/menu/AnaMenuyeDonTusu.tscn" type="PackedScene" id=1]
[ext_resource path="res://tscndosyalari/menu/ParaTablo.tscn" type="PackedScene" id=2]
[ext_resource path="res://script/menu/ArabaSecim.gd" type="Script" id=3]
[ext_resource path="res://resimler/arkaplan/anamenuarka7.png" type="Texture" id=4]
[ext_resource path="res://resimler/menu/garaj/ae86t.png" type="Texture" id=5]
[ext_resource path="res://resimler/menu/garaj/ticot.png" type="Texture" id=6]
[ext_resource path="res://script/menu/KoyuMod.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="Theme" id=11]
HScrollBar/styles/scroll = SubResource( 9 )
ScrollContainer/styles/bg = SubResource( 10 )

[node name="Garaj" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 11 )
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 4 )
expand = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -696.0
margin_top = -296.0
margin_right = 728.0
margin_bottom = 216.0
color = Color( 0, 0, 0, 0.490196 )

[node name="anamenuyedon" parent="." instance=ExtResource( 1 )]

[node name="HScrollBar" type="ScrollContainer" parent="."]
margin_left = 148.0
margin_top = 176.0
margin_right = 1148.0
margin_bottom = 656.0

[node name="HBoxContainer" type="HBoxContainer" parent="HScrollBar"]
margin_right = 500.0
margin_bottom = 400.0
custom_constants/separation = 0
alignment = 1

[node name="tico" type="TextureButton" parent="HScrollBar/HBoxContainer"]
margin_right = 250.0
margin_bottom = 400.0
rect_min_size = Vector2( 250, 400 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
expand = true

[node name="ae86" type="TextureButton" parent="HScrollBar/HBoxContainer"]
margin_left = 250.0
margin_right = 500.0
margin_bottom = 400.0
rect_min_size = Vector2( 250, 400 )
focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
expand = true

[node name="Button3" type="Button" parent="HScrollBar/HBoxContainer"]
visible = false
margin_left = 508.0
margin_right = 758.0
margin_bottom = 400.0
rect_min_size = Vector2( 250, 400 )

[node name="Button4" type="Button" parent="HScrollBar/HBoxContainer"]
visible = false
margin_left = 762.0
margin_right = 1012.0
margin_bottom = 400.0
rect_min_size = Vector2( 250, 0 )

[node name="ParaTablo" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="HScrollBar/HBoxContainer/tico" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="HScrollBar/HBoxContainer/ae86" to="." method="_on_Button1_pressed"]
